; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_l2arc_start.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_l2arc_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@spa_mode_global = common dso_local global i32 0, align 4
@FWRITE = common dso_local global i32 0, align 4
@l2arc_feed_thread = common dso_local global i32 0, align 4
@p0 = common dso_local global i32 0, align 4
@TS_RUN = common dso_local global i32 0, align 4
@defclsyspri = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @l2arc_start() #0 {
  %1 = load i32, i32* @spa_mode_global, align 4
  %2 = load i32, i32* @FWRITE, align 4
  %3 = and i32 %1, %2
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  br label %11

6:                                                ; preds = %0
  %7 = load i32, i32* @l2arc_feed_thread, align 4
  %8 = load i32, i32* @TS_RUN, align 4
  %9 = load i32, i32* @defclsyspri, align 4
  %10 = call i32 @thread_create(i32* null, i32 0, i32 %7, i32* null, i32 0, i32* @p0, i32 %8, i32 %9)
  br label %11

11:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @thread_create(i32*, i32, i32, i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
